--- a/index.html
+++ b/index.html
@@ -6,59 +6,59 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <!--Vínculo de tipo de letra(tipografía)-->
-  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700" rel="stylesheet">
   <!--vínculo de iconos-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--vínculo de archivo CSS con html-->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <head>
-    <nav>
-      <div>
+  <header>
+    <nav class="menu">
+      <div class="container">
         <ul>
-          <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>
-          <li><a href="#"><i class="fa fa-bell-o" aria-hidden="true"></i>Notificaciones</a></li>
-          <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Mensaje</a></li>
+          <li class="inline-block"><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>
+          <li class="inline-block"><a href="#"><i class="fa fa-bell-o" aria-hidden="true"></i>Notificaciones</a></li>
+          <li class="inline-block"><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Mensaje</a></li>
         </ul>
       </div>
-      <div><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
-      <div>
-        <form action=""><input type="text" placeholder = 'Buscar en Twitter'>
+      <div class="container"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+      <div class="container">
+        <form action="" class="inline-block"><input type="text" placeholder = 'Buscar en Twitter'>
           <span><i class="fa fa-search" aria-hidden="true"></i></span>
         </form>
-        <div>
+        <div class="inline-block">
           <a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
           <button>Twittear</button>
         </div>
       </div>
     </nav>
-  </head>
-  <section>
-    <div></div>
-    <div>
-      <div>
+  </header>
+  <section class="section-perfil">
+    <div class="empty"></div>
+    <div class="div-perfil">
+      <div class="user">
         <h1>MCOV</h1>
         <p>@crisma17101990</p>
       </div>
-      <span>
+      <a href="#" class="inline-block">
         <h3>Tweets</h3>
         <p>4</p>
-      </span>
-      <span>
+      </a>
+        <a href="#" class="inline-block">
         <h3>Siguiendo</h3>
         <p>31</p>
-      </span>
-      <span>
+      </a>
+        <a href="#" class="inline-block">
         <h3>Seguidores</h3>
         <p>11</p>
-      </span>
+      </a>
     </div>
   </section>
-  <section>
+  <section class="section-tweets">
     <div>
-      <span><i class="fa fa-user-circle" aria-hidden="true"></i></span>
-      <form action="">
+      <span class="inline-block"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
+      <form action="" class="inline-block">
         <input type="text" placeholder = '¿Qué esta pasando?'>
         <span><i class="fa fa-picture-o" aria-hidden="true"></i></span>
       </form>
