Añade estilos css modificado(añade imagen)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav class="menu">
       <div class="container">
         <ul>
-          <li class="inline-block"><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>
-          <li class="inline-block"><a href="#"><i class="fa fa-bell-o" aria-hidden="true"></i>Notificaciones</a></li>
+          <li class="inline-block"><a href="https://twitter.com/"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>
+          <li class="inline-block"><a href="https://twitter.com/i/notifications"><i class="fa fa-bell-o" aria-hidden="true"></i>Notificaciones</a></li>
           <li class="inline-block"><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Mensaje</a></li>
         </ul>
       </div>
@@ -28,7 +28,7 @@
           <span><i class="fa fa-search" aria-hidden="true"></i></span>
         </form>
         <div class="inline-block">
-          <a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
+          <a  href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
           <button>Twittear</button>
         </div>
       </div>
@@ -38,18 +38,17 @@
     <div class="empty"></div>
     <div class="div-perfil">
       <div class="user">
-        <h1>MCOV</h1>
-        <p>@crisma17101990</p>
+        <a href="https://twitter.com/crisma17101990">MCOV<br>@crisma17101990 </a>
       </div>
-      <a href="#" class="inline-block">
+      <a href="https://twitter.com/crisma17101990" class="inline-block">
         <h3>Tweets</h3>
         <p>4</p>
       </a>
-        <a href="#" class="inline-block">
+        <a href="https://twitter.com/following" class="inline-block">
         <h3>Siguiendo</h3>
         <p>31</p>
       </a>
-        <a href="#" class="inline-block">
+        <a href="https://twitter.com/followers" class="inline-block">
         <h3>Seguidores</h3>
         <p>11</p>
       </a>
@@ -57,9 +56,9 @@
   </section>
   <section class="section-tweets">
     <div>
-      <span class="inline-block"><i class="fa fa-user-circle" aria-hidden="true"></i></span>
+      <span class="inline-block photo"><img src="assets/imgs/cris.jpg" alt="cris"></span>
       <form action="" class="inline-block">
-        <input type="text" placeholder = '¿Qué esta pasando?'>
+        <input type="text" placeholder = '¿Qué esta pasando?' autocapitalize = 'none', autocomplete="off" autofocus = 'search_query' tabindex="0" spellcheck="false" role="combobox" dir="ltr">
         <span><i class="fa fa-picture-o" aria-hidden="true"></i></span>
       </form>
     </div>
