--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
     </div>
   </section>
   <section class="section-tweets">
-    <div>
+    <div class="div-tweets">
       <span class="inline-block photo"><img src="assets/imgs/cris.jpg" alt="cris"></span>
-      <form action="" class="inline-block">
-        <input type="text" placeholder = '¿Qué esta pasando?' autocapitalize = 'none', autocomplete="off" autofocus = 'search_query' tabindex="0" spellcheck="false" role="combobox" dir="ltr">
+      <form id="form" class="inline-block">
+        <input id="input"type="text" placeholder = '¿Qué esta pasando?'>
         <span><i class="fa fa-picture-o" aria-hidden="true"></i></span>
       </form>
+    </div>
+    <div id="div-father">
+
     </div>
   </section>
 
